/cp 2007-09-18  Paolo Carlini  <pcarlini@suse.de>

PR c++/33464
	* cxx-pretty-print.c (pp_cxx_trait_expression): Add.
	(pp_cxx_primary_expression): Use it.
	* cxx-pretty-print.h (pp_cxx_trait_expression): Declare.
	* error.c (dump_expr): Use it.

/testsuite
2007-09-18  Paolo Carlini  <pcarlini@suse.de>

	PR c++/33464
	* g++.dg/ext/is_class_error.C: Rename to is_class_error1.C.
	* g++.dg/ext/is_class_error2.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128578 138bc75d-0d04-0410-961f-82ee72b054a4