gcc/cp/error.c
@@ -2054,6 +2054,10 @@ dump_expr (tree t, int flags)
       dump_type (t, flags);
       break;
 
+    case TRAIT_EXPR:
+      pp_cxx_trait_expression (cxx_pp, t);
+      break;
+
       /*  This list is incomplete, but should suffice for now.
 	  It is very important that `sorry' does not call
 	  `report_error_function'.  That could cause an infinite loop.  */
